* Dissectors based on Protobuf can register themselves to a new 'protobuf_field' dissector table,
  which is keyed with the full names of fields, for further parsing fields of BYTES or STRING type.
* Wireshark is able to decode, play, and save iLBC payload on platforms where the https://github.com/TimothyGu/libilbc[iLBC library] is available.
* “Decode As” entries can now be copied from other profiles using a button in the dialog.
* sshdump can now be copied to multiple instances. Each instance will show up a different interface and will have its own profile.
* The main window now supports a packet diagram view, which shows each packet as a textbook-style diagram.
* Filter buttons (“Preferences -> Filter Buttons”) can be grouped by using “//” as a path separator in the filter button label.

// === Removed Features and Support

//=== Removed Dissectors

// === New File Format Decoding Support

// [commaize]
// --
// --

=== New Protocol Support

// Add one protocol per line between the -- delimiters.
[commaize]
--
Arinc 615A (A615A)
Asphodel Protocol
AudioCodes Debug Recording (ACDR)
Bluetooth HCI ISO (BT HCI ISO)
Cisco MisCabling Protocol (MCP)
Community ID Flow Hashing (CommunityID)
DCE/RPC IRemoteWinspool SubSystem, (IREMOTEWINSPOOL)
Dynamic Link Exchange Protocol (DLEP)
Fortinet Single Sign-on (FSSO)
FTDI Multi-Protocol Synchronous Serial Engine (FTDI MPSSE)
EAP Generalized Pre-Shared Key (EAP-GPSK)
EAP Password Authenticated Exchange (EAP-PAX)
EAP Pre-Shared Key (EAP-PSK)
EAP Shared-secret Authentication and Key Establishment (EAP-SAKE)
Hypertext Transfer Protocol Version 3 (HTTP3)
ILDA Digital Network (IDN)
Java Debug Wire Protocol (JDWP)
LBM Stateful Resolution Service (LBMSRS)
Lithionics Battery Management
OBSAI UDP-based Communication Protocol (UDPCP)
Palo Alto Heartbeat Backup (PA-HB-Bak)
ScyllaDB RPC
Technically Enhanced Capture Module Protocol (TECMP)
Tunnel Extensible Authentication Protocol (TEAP)
UDP based FTP w/ multicast V5 (UFTP5)