@@ -1173,6 +1173,8 @@ ws_find_package(BCG729 ENABLE_BCG729 HAVE_BCG729)
 
 ws_find_package(ILBC ENABLE_ILBC HAVE_ILBC)
 
+ws_find_package(OPUS ENABLE_OPUS HAVE_OPUS)
+
 # CMake 3.9 and below used 'LIBXML2_LIBRARIES' as the name of the cache entry
 # storing the find_library result. Transfer it to the new cache variable such
 # that reset_find_package can detect and clear outdated cache variables.
@@ -1494,6 +1496,11 @@ if(ENABLE_PLUGINS)
 			plugins/codecs/iLBC
 		)
 	endif()
+	if(OPUS_FOUND)
+		list(APPEND PLUGIN_SRC_DIRS
+			plugins/codecs/opus_dec
+		)
+	endif()
 	if(SBC_FOUND)
 		list(APPEND PLUGIN_SRC_DIRS
 			plugins/codecs/sbc
@@ -1612,6 +1619,11 @@ set_package_properties(ILBC PROPERTIES
 	DESCRIPTION "iLBC decoder"
 	URL "https://github.com/TimothyGu/libilbc"
 	PURPOSE "Support for iLBC codec in RTP player"
+)
+set_package_properties(OPUS PROPERTIES
+	DESCRIPTION "opus decoder"
+	URL "https://opus-codec.org/"
+	PURPOSE "Support for opus codec in RTP player"
 )
 set_package_properties(LIBXML2 PROPERTIES
 	DESCRIPTION "XML parsing library"
@@ -1907,6 +1919,9 @@ if(WIN32)
 	if (ILBC_FOUND)
 		list (APPEND OPTIONAL_DLLS "${ILBC_DLL_DIR}/${ILBC_DLL}")
 	endif(ILBC_FOUND)
+	if (OPUS_FOUND)
+		list (APPEND OPTIONAL_DLLS "${OPUS_DLL_DIR}/${OPUS_DLL}")
+	endif(OPUS_FOUND)
 	if (LIBXML2_FOUND)
 		foreach( _dll ${LIBXML2_DLLS} )
 			list (APPEND OPTIONAL_DLLS "${LIBXML2_DLL_DIR}/${_dll}")
@@ -3036,6 +3051,9 @@ if(RPMBUILD_EXECUTABLE)
 	endif()
 	if (ILBC_FOUND)
 		list(APPEND _rpmbuild_with_args --with ilbc)
+	endif()
+	if (OPUS_FOUND)
+		list(APPEND _rpmbuild_with_args --with opus)
 	endif()
 	if (LIBXML2_FOUND)
 		list(APPEND _rpmbuild_with_args --with libxml2)
