@@ -217,6 +217,9 @@ echo "libnl3/libnl are unavailable" >&2
 add_package ADDITIONAL_LIST ilbc-devel ||
 echo "ilbc is unavailable" >&2
 
+add_package ADDITIONAL_LIST opus-devel ||
+    echo "opus is unavailable" >&2
+
 ACTUAL_LIST=$BASIC_LIST
 
 # Now arrange for optional support libraries
